2006-04-21  Kjartan Maraas  <kmaraas@gnome.org>

	* modulesets/gnome-2.16.modules: Use HEAD for libxklavier
	Should fix build problems in gnome-applets and the control-center.

2006-04-20  Luca Ferretti  <elle.uca@libero.it>

	*  modulesets/gnome-2.14.modules: use gnome-2-14 branch for
	gnome-vfs.

2006-04-20  Luca Ferretti  <elle.uca@libero.it>

	*  modulesets/gnome-2.14.modules: add pitivi and gnonlin.
	*  modulesets/gnome-2.16.modules: same here.

2006-04-20  James Henstridge  <james@jamesh.id.au>

	* modulesets/freedesktop.modules (PolicyKit): depend on dbus,
	fixing bug #339087.

	* modulesets/gnome-2.14.modules: same here.

	* modulesets/gnome-2.16.modules (gnome-user-docs): depend on
	gnome-doc-utils, fixing bug #339060.

2006-04-19  Luca Ferretti  <elle.uca@libero.it>

	*  modulesets/gnome-2.14.modules: Use gnome-2-14 branch for
	gnome-keyring.

2006-04-18  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.14.modules: use the proper gnome-2-14 branch for
	gnome-applets, gnome-doc-utils and sound-juicer modules; remove
	icon-naming-utils from dependencies list of gnome-icon-theme (not
	needed in gnome-2-14 branch). Fix bug 338886.

2006-04-18  James Henstridge  <james@jamesh.id.au>

	* jhbuild/modtypes/tarball.py (Tarball.do_unpack): fix test for
	tarball build dir.  Patch from Martin Ericsson
	<martin.s.ericsson@gmail.com> to fix bug #338631.

	* jhbuild/modtypes/mozillamodule.py: add missed CommandError import.
	(MozillaModule.do_checkout): succeeded should be True if no
	CommandError was raised.  Fixes bug #338553.

2006-04-18  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.14.modules: add missing dependecies for cairo-1-0
	(fixed bug 338789)

2006-04-13  German Poo-Caaman~o  <gpoo@ubiobio.cl>

	* modulesets/gnome-2.16.modules: Make gnome-nettool depend on
	gtk+, libglade and gconf instead of libgnomeui.

2006-04-13  James Henstridge  <james@jamesh.id.au>

	* modulesets/bootstrap.modules: undo indentation changes.
