@@ -1,3 +1,13 @@
+2006-04-23  Raphael Slinckx  <rslinckx@cvs.gnome.org>
+
+	* jhbuild/commands/info.py:
+	* jhbuild/modtypes/darcsmodule.py:
+	* jhbuild/moduleset.py:
+	* jhbuild/utils/darcs.py:
+	* modulesets/moduleset.dtd:
+	* modulesets/moduleset.rnc:
+	Add support for Darcs repositories in .modules files
+
 2006-04-21  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* modulesets/gnome-2.16.modules: Use HEAD for libxklavier
